--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;900&display=swap" rel="stylesheet">
 
     <!-- FONTAWSOME -->
     <script src="https://kit.fontawesome.com/dab75176c5.js" crossorigin="anonymous"></script>
@@ -93,6 +93,20 @@
         <section id="about" class="about"></section>
     </main>
 
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__polygon"></div>
+            <img src="./img/dormed-logo-light.png" alt="logotyp firmy Dormed Ryszard Wesołowski">
+            <div class="footer__divider"></div>
+            <div class="footer__body">
+                <p class="footer__body-left">Created by <br><i class="fab fa-linkedin"></i> <span>Łukasz
+                        Kłosowski</span></p>
+                <p class="footer__body-right">&copy;<span class="footer__current-year"></span> Wszystkie prawa
+                    zastrzeżone</p>
+            </div>
+        </div>
+    </footer>
 
     <!-- SLICK.JS JQUERY -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
