--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
         <!-- SECTION SERVICE -->
         <section id="services" class="services section-dark">
+            <div class="services-top__img"></div>
             <div class="services__img"></div>
             <h3 class="section-title services-title">Co możemy dla Ciebie zrobić?</h3>
 
@@ -237,7 +238,11 @@
                                 urządzeń sieci LAN
                             </p>
                         </div>
-                        <p class="services__card-front-text"></p>
+                        <p class="services__card-front-text">Na system okablowania strukturalnego sklada się wiele
+                            komponentów - m.in. kable, elementy połączeniowe, które muszą spełniać wymagania określonych
+                            norm. Głównym założeniem budowy okablowania strukturalnego jest zapewnienie dostępu z
+                            każdego punktu abonenckiego do różnych systemów, np. sieci komputerowej.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -293,8 +298,11 @@
             <img src="./img/dormed-logo-light.png" alt="logotyp firmy Dormed Ryszard Wesołowski">
             <div class="footer__divider"></div>
             <div class="footer__body">
-                <p class="footer__body-left">Created by <br><i class="fab fa-linkedin"></i> <span>Łukasz
-                        Kłosowski</span></p>
+                <!-- <p class="footer__body-left">Created by <br><i class="fab fa-linkedin"></i> <span>Łukasz
+                        Kłosowski</span></p> -->
+                <p class="footer__body-left">Created by <br>
+                    <span>Łukasz Kłosowski</span>
+                </p>
                 <p class="footer__body-right">&copy;<span class="footer__current-year"></span> Wszystkie prawa
                     zastrzeżone</p>
             </div>
