--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         </div>
     </nav>
 
-    <nav class="nav-mobile">
+    <!-- <nav class="nav-mobile">
         <div class="wrapper">
             <div class="nav-mobile__box">
-                <!-- <div class="nav-desktop__scroll-bar"></div> -->
                 <a href="#"><img class="nav-mobile__company-logo" src="./img/dormed-logo-gray.png"
                         alt="logotyp firmy Dormed Ryszard Wesołowski"></a>
                 <div class="nav-mobile__items">
@@ -60,7 +59,7 @@
                 </div>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- HEADER -->
     <header class="header">
@@ -125,7 +124,6 @@
 
         <!-- SECTION SERVICE -->
         <section id="services" class="services section-dark">
-            <div class="services-top__img"></div>
             <div class="services__img"></div>
             <h3 class="section-title services-title">Co możemy dla Ciebie zrobić?</h3>
 
